--- a/TwitterClient-iOS/TWReTweetCell.xib
+++ b/TwitterClient-iOS/TWReTweetCell.xib
@@ -64,14 +64,14 @@
                             <constraint firstAttribute="height" constant="16" id="d86-nX-4BB"/>
                         </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retweet" translatesAutoresizingMaskIntoConstraints="NO" id="j7A-dx-PA6">
+                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retweet" translatesAutoresizingMaskIntoConstraints="NO" id="j7A-dx-PA6">
                         <rect key="frame" x="136" y="111" width="19" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="hFT-9m-znc"/>
                             <constraint firstAttribute="width" constant="19" id="kXE-KW-Gig"/>
                         </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favorite" translatesAutoresizingMaskIntoConstraints="NO" id="M6I-LK-3dz">
+                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favorite" translatesAutoresizingMaskIntoConstraints="NO" id="M6I-LK-3dz">
                         <rect key="frame" x="211" y="111" width="16" height="16"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="16" id="mci-rP-tzc"/>
