--- a/TwitterClient-iOS/LoginViewController.xib
+++ b/TwitterClient-iOS/LoginViewController.xib
@@ -14,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="01X-Hy-qJh">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="01X-Hy-qJh">
                     <rect key="frame" x="42" y="269" width="237" height="30"/>
                     <color key="backgroundColor" name="alternateSelectedControlColor" catalog="System" colorSpace="catalog"/>
                     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -27,6 +27,10 @@
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="centerX" secondItem="01X-Hy-qJh" secondAttribute="centerX" id="UDn-Kw-tkE"/>
+                <constraint firstAttribute="centerY" secondItem="01X-Hy-qJh" secondAttribute="centerY" id="ocQ-HR-mm5"/>
+            </constraints>
             <point key="canvasLocation" x="322" y="363"/>
         </view>
     </objects>
