implemented user profile view controller

--- a/TwitterClient-iOS/TWReTweetCell.xib
+++ b/TwitterClient-iOS/TWReTweetCell.xib
@@ -44,8 +44,9 @@
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xu4-cy-jiN">
+                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xu4-cy-jiN">
                         <rect key="frame" x="8" y="28" width="48" height="48"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="height" constant="48" id="ggy-eR-6vF"/>
                             <constraint firstAttribute="width" constant="48" id="lHw-XT-Mzb"/>
